Project1-main/force-app/main/default/objects/Parts_Order_List__c/Parts_Order_List__c.object-meta.xml
<CustomObject>
    <description>List of ordered parts</description>
    <label>Part Order List</label>
    <nameField>
        <label>Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parts Order List</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>