Project1-main/force-app/main/default/objects/Parts_Order_List__c/fields/Expected_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Arrival_Date__c</fullName>
    <description>Part expected delivery date</description>
    <label>Expected Arrival Date</label>
    <type>Date</type>
</CustomField>