Project1-main/force-app/main/default/objects/Parts_Order_List__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <length>4</length>
    <type>Text</type>
</CustomField>