Project1-main/force-app/main/default/objects/Parts_Order_List__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipLabel>Parts Order List</relationshipLabel>
    <relationshipName>Parts_Order_List</relationshipName>
    <type>Lookup</type>
</CustomField>